<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FSG</string>

    <!-- Menus -->
    <string name="menu_reg_insertDummyData">Sampledata in DB schreiben</string>
    <string name="menu_reg_showDataVersion">Datenversionsübersicht</string>
    <string name="menu_reg_updateRequest">Updates anfordern</string>
    <string name="menu_reg_clearDB">Datenbank leeren</string>

    <!-- Titelzeile von Activities -->
    <string name="title_activity_main">FSG</string>
    <string name="title_activity_error">Fehlermeldung</string>
    <string name="title_activity_data_version">Datenversionsübersicht</string>
    <string name="title_activity_update_request">Updates anfordern</string>
    <string name="title_activity_admin">Administratorbereich</string>
    <string name="title_activity_delete">Band ungültig machen</string>
    <string name="title_activity_transfer">Band übertragen</string>
    <string name="title_activity_delete_one">Einzelnen Block ungültig machen</string>

    <!-- MainActivity Strings -->
    <string name="main_activity_button_1">Fahrerregistrierung</string>
    <string name="main_activity_button_2">Briefing (Einchecken)</string>
    <string name="main_activity_button_3">Briefing (Auschecken)</string>
    <string name="main_activity_button_4">Rennen</string>
    <string name="main_activity_button_5">Infoterminal</string>

    <!-- Fehlermeldung Strings -->
    <string name="error_generic_exception">Ein unerwarteter Fehler ist aufgetreten.</string>
    <string name="error_tag_memory_full">Der Tag ist voll, bitte tauschen Sie ihn aus.</string>
    <string name="error_tag_wrong_key">Fehler beim Lesen des Tags, eventuell ist der Key falsch.</string>
    <string name="error_not_nfc_support">Keine NFC-Unterstützung auf dem Gerät.</string>
    <string name="error_zip_file_fail">Fehler beim Entpacken der Zip-Datei (Fahrerbilder).</string>
    <string name="error_driver_pics_fail">Fehler beim Speichern der Fahrerbilder.</string>
    <string name="error_empy_choice">Bitte wählen Sie mindestens einen Datensatz aus!</string>
    <string name="error_registration_already_present">Auf dem Tag ist bereits jemand registriert.\nBitte einen leeren Tag benutzen!</string>
    <string name="error_tag_wrong_key_or_format">Tag-Lesefehler. Mögliche Ursachen: der Key ist falsch oder der Tag ist falsch formatiert (z.B. mit dem NDEF-Format).</string>
    <string name="error_tag_empty">Fehler: Tag enthält keine (sinnvollen) Daten!</string>
    <string name="error_receiving_bundle">Fehler beim Empfangen eines IBR-DTN-Bündels.</string> <!-- Wird beim IBR-DTN-Service benutzt -->
    <string name="error_sending_bundle">Fehler beim Senden eines IBR-DTN-Bündels.</string> <!-- Wird beim IBR-DTN-Service benutzt -->
    <string name="error_not_ibr_dtn">IBR-DTN-Daemon inaktiv. Bitte starten Sie ihn (ggf. installieren).</string> <!-- Wird beim IBR-DTN-Service benutzt -->
    <string name="error_security_exception">"Permission"-Fehler. Deinstallieren und installieren Sie die App erneut!</string> <!-- Wird beim IBR-DTN-Service benutzt -->
    <string name="error_end_of_road">Tut uns Leid, hier wird noch gebaut. ;-)</string>
    <string name="error_driver_already_checked_in">Driver already checked in to this briefing</string>
    <string name="error_empty_database">Datenbank leer. Bitte zunächst neue Daten anfordern!</string>
    <string name="ok">OK</string>

    <!-- Briefing (sowohl ein- als auch auschecken) Strings -->
    <string name="init_driver">Initialisierung des Fahrers</string>
    <string name="wristband_near">Fahrerarmband an Gerät halten</string>
    <string name="checkInSuccessful">Einchecken erfolgreich</string>
    <string name="checkOutSuccessful">Auschecken erfolgreich</string>
    <string name="briefing">Briefing</string>
    <string name="checkInDouble">Sie sind bereits für heute eingecheckt!</string>
    <string name="checkOutDouble">Sie waren nicht eingecheckt!</string>

    <!-- RunActivity Strings -->
    <string name="which_discipline">Disziplin und Anzahl Runs auswählen</string>
    <string name="acceleration">Acceleration</string>
    <string name="skidpad">Skid Pad</string>
    <string name="autocross">Autocross</string>
    <string name="endurance">Endurance</string>
    <string name="which_run">Wie viele Rennen sollen geloggt werden?</string>
    <string name="run_confirm_scan">Scan</string>
    <string name="run_init">Initialisierung</string>
    <string name="run_scan_wait">Scan........Bitte warten.....</string>
    <string name="run_find_device">Gerät suchen:</string>
    <string name="run_find_cancel">Abbruch</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="btnRunOne">1</string>
    <string name="btnRunTwo">2</string>
    <string name="txtRunInfo">Anzahl zu fahrende Runs auswählen</string>
    <string name="btnConfirm">Bestätigen</string>
    <string name="txtConfirmDisciplineName">Ausgewählte Disziplin: </string>
    <string name="txtConfirmRunCount">Ausgewählte Anzahl Runs: </string>

    <!-- Fahrerregistrierung Strings -->
    <string name="select_team">Wählen Sie ihr Team aus:</string>
    <string name="tblRegTitleID">#</string>
    <string name="tblRegTitleCountry">Country</string>
    <string name="tblRegTitleCity">City</string>
    <string name="tblRegTitleUniversity">University</string>
    <string name="tblRegTitleTeamname">Teamname</string>
    <string name="btnRegSearch">Suchen</string>
    <string name="tblDriversName">Name</string>
    <string name="lbSelectedTeam">Team: </string>
    <string name="registrationSuccessful">Registrierung erfolgreich</string>

    <!-- InfoTerminal-Activity Strings -->
    <string name="infoTerminalTryAgain">Fehler beim Lesen, bitte probieren Sie es erneut.</string>
    <string name="infoTerminalReading">Das Fahrerarmband wird gelesen.\nBitte nicht entfernen.</string>
    <string name="infoTerminalName">Nachname:</string>
    <string name="infoTerminalFirstname">Vorname:</string>
    <string name="infoTerminalBriefing">Briefing heute besucht:</string>
    <string name="infoTerminalAcceleration">Acceleration runs:</string>
    <string name="infoTerminalEndurance">Endurance runs:</string>
    <string name="infoTerminalSkidPad">Skid pad runs:</string>
    <string name="infoTerminalAutocross">Autocross runs:</string>

    <!-- Version-Activity Strings -->
    <string name="version_title">Datenversionsübersicht</string>
    <string name="version_drivers">Fahrer:</string>
    <string name="version_teams">Teams:</string>
    <string name="version_blacklist_tags">Bänder-Blacklist:</string>
    <string name="version_blacklist_devices">Geräte-Blacklist:</string>
    <string name="version_driver_pics">Fahrerbilder:</string>

    <!-- Update-Activity Strings -->
    <string name="update_request_title">Updates anfordern</string>
    <string name="request_button">Anfordern</string>
    <string name="cancel">Abbrechen</string>

    <!-- Admin-Activity Strings -->
    <string name="admin_copy_tag">Band übertragen</string>
    <string name="admin_invalidate_tag">Band ungültig machen</string>
    <string name="admin_invalidate_block">Einzelnen Block ungültig machen</string>
    <string name="admin_configuration">Einstellungen</string>
    <string name="admin_cleanTag">Tag leeren</string>
    <string name="admin_initializeTag">Tag initialisieren</string>

    <!-- Notification Strings -->
    <string name="noti_title">FSG - Update erhalten</string>
    <string name="noti_text_driver_pics">Fahrerbilder</string>
    <string name="noti_text_drivers">Fahrerdaten</string>
    <string name="noti_text_teams">Teams-Daten</string>
    <string name="noti_text_blacklist_tags">Bänder-Blacklist</string>
    <string name="noti_text_blacklist_devices">Geräte-Blacklist</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_info_terminal_post">InfoTerminalPostActivity</string>
    <string name="title_activity_info_terminalinitialisierung">InfoTerminalinitialisierungActivity</string>
    <string name="title_activity_info_terminal_initialisierung">InfoTerminalInitialisierung</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_run_post">RunPost</string>
    <string name="title_activity_admin_invalidate_tag">Tag ungültig machen</string>

</resources>