<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="20"
    android:background="@drawable/background_grey"
    android:gravity="center_vertical|center_horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/grid04"
        android:textSize="@dimen/grid06"
        android:gravity="center"
        android:textColor="@color/button_text_color"
        android:text="@string/which_discipline"/>
      
    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/grid04"
        android:background="@layout/button_selector"
        android:gravity="center" 
        android:textColor="@color/button_text_color"
        android:onClick="onButtonClick"
        android:text="@string/acceleration" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/grid04"
        android:background="@layout/button_selector"
        android:gravity="center" 
        android:textColor="@color/button_text_color"
        android:onClick="onButtonClick"
        android:text="@string/skipad" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/grid04"
        android:background="@layout/button_selector"
        android:gravity="center" 
        android:textColor="@color/button_text_color"
        android:onClick="onButtonClick"
        android:text="@string/autocross" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/grid04"
        android:background="@layout/button_selector"
        android:gravity="center" 
        android:textColor="@color/button_text_color"
        android:onClick="onButtonClick"
        android:text="@string/endurance" />

</LinearLayout>